[tool.poetry]
name = "ai-gen-ui"
version = "0.1.0"
description = ""
authors = ["Jialiang WEI <jialiang.wei@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gradio = "^4.36.0"
diffusers = "^0.28.2"
peft = "^0.11.1"
transformers = "^4.41.2"
langchain = "^0.2.3"
langchain-openai = "^0.1.8"
beautifulsoup4 = "^4.12.3"
gradio-iframe = "^0.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
